<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/num1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/symbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/num1" />

    <TextView
        android:id="@+id/num2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/symbol" />

    <TextView
        android:id="@+id/answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/equals"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/num2" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/answer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/answer" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="456dp"
        android:layout_height="52dp"
        android:padding="0dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result"
        app:srcCompat="@drawable/divider" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="8dp"
            android:orientation="horizontal"
            android:paddingRight="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button7"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@android:drawable/btn_default_small"
                    android:onClick="button"
                    android:text="@string/seven"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button4"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@android:drawable/btn_default_small"
                    android:onClick="button"
                    android:text="@string/four"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button1"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@android:drawable/btn_default"
                    android:onClick="button"
                    android:text="@string/one"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button_dot"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@android:drawable/btn_default_small"
                    android:onClick="dot_is_coming"
                    android:text="@string/dot"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button8"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@android:drawable/btn_default_small"
                    android:onClick="button"
                    android:text="@string/eight"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button5"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@android:drawable/btn_default_small"
                    android:onClick="button"
                    android:text="@string/five"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@android:drawable/btn_default_small"
                    android:onClick="button"
                    android:text="@string/two"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button0"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@android:drawable/btn_default_small"
                    android:onClick="button"
                    android:text="@string/zero"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button9"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@android:drawable/btn_default_small"
                    android:onClick="button"
                    android:text="@string/nine"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button6"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@android:drawable/btn_default_small"
                    android:onClick="button"
                    android:text="@string/six"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@android:drawable/btn_default_small"
                    android:onClick="button"
                    android:text="@string/three"
                    android:textSize="24sp" />

                <ImageView
                    android:id="@+id/button_back"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@android:drawable/btn_default_small"
                    android:clickable="true"
                    android:contentDescription="back_button"
                    android:onClick="back_button"
                    android:scaleType="center"
                    app:srcCompat="@drawable/ic_arrow_back_black_24dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button_divide"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@android:drawable/btn_default_small"
                    android:onClick="symbol"
                    android:text="@string/div"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button_mul"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@android:drawable/btn_default_small"
                    android:onClick="symbol"
                    android:text="@string/mul"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button_minus"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@android:drawable/btn_default_small"
                    android:onClick="symbol"
                    android:text="@string/minus"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button_add"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@android:drawable/btn_default_small"
                    android:onClick="symbol"
                    android:text="@string/add"
                    android:textSize="24sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/clear"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@android:drawable/btn_default_small"
                android:onClick="clearall"
                android:text="@string/clear"
                android:textSize="24sp" />

            <Button
                android:id="@+id/equal"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@android:drawable/btn_default_small"
                android:onClick="give_answer"
                android:text="@string/equals"
                android:textSize="24sp" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/dot1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/dotted1"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/num1"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/dot2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/dotted2"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/num2"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>